fix header style issues on tablet protrait, remove image bg from team section

--- a/client/scss/components/_header.scss
+++ b/client/scss/components/_header.scss
@@ -45,7 +45,9 @@
         display: block;
         padding: 0 16px;
         margin: 0;
-        border: 0;
+        border: 0; }
+
+      @include breakpoint($bp-laptop-l) {
         text-align: right; } }
 
       .header__nav--active {
