--- a/client/scss/helpers/_mixins.scss
+++ b/client/scss/helpers/_mixins.scss
@@ -101,6 +101,7 @@
   letter-spacing: 0.2px;
 
   border-color: $color;
+  white-space: nowrap;
   cursor: pointer;
   z-index: 1;
 
